메시지, 국제화 기능 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-# ??? ??
+# \uB514\uD3F4\uD2B8 \uAC12\uC74C -> \uC8FC\uC11D\uCC98\uB9AC\uD558\uAC70\uB098 \uC0DD\uB7B5\uD574\uB3C4 \uB3D9\uC791\uD568
 spring.messages.basename=messages
